[package]
name = "df-types"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2"
serde_json = "1"
bigdecimal = { version = "0.4", features = ["serde"] }
semver = "1"
web3 = "0.19"
hex = "*"
ethabi = { version = "18", optional = true }
wasmer = { version = "4", optional = true }

[features]
ethereum = ["ethabi"]
wasm = ["wasmer"]
